Environment variables added for build process

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -5,5 +5,5 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-113548627-1');
+  gtag('config', {{ page.google_analytics }});
 </script>
