--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ this.page.identifier = {{ page.disqus_shortname }}; // Replace PAGE_IDENTIFIER w
 */
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://kaansk.disqus.com/embed.js';
+s.src = 'https://{{ page.disqus_shortname }}.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
@@ -42,4 +42,4 @@ s.setAttribute('data-timestamp', +new Date());
 {% endif %}
 </article>
 
-{% if page.comments != false %}{% include disqus.html %}{% endif %}
+{% if jekyll.environment == "production" and page.comments == false %}{% include disqus.html %}{% endif %}
