--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,4 +42,4 @@ s.setAttribute('data-timestamp', +new Date());
 {% endif %}
 </article>
 
-{% if jekyll.environment == "production" and page.comments == false %}{% include disqus.html %}{% endif %}
+{% if jekyll.environment == "production" and page.comments != false %}{% include disqus.html %}{% endif %}
