--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+  <meta content="hacking,hacking dream,hacking dream.net, how to hack wifi,wifi hacking,windows hacking, massimo tamos pentester ethical hacker, kali linux, backtrack,how to hack oscp" name="keywords">
+
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html }}{% else %}{{ site.description }}{% endif %}">
