Trying new seo strategy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    {% seo %}
+  </head> 
   {% include head.html %}
 
 {% if jekyll.environment == "production" %}
